src/test/ui/issues/issue-22370.stderr
error[E0393]: the type parameter `T` must be explicitly specified
  --> $DIR/issue-22370.rs:5:10
   |
LL | fn f(a: &A) {}
   |          ^ missing reference to `T`
   |
   = note: because of the default `Self` reference, type parameters must be specified on object types

error: aborting due to previous error

For more information about this error, try `rustc --explain E0393`.
